# ExampleMod

./: .gitignore  .gitmodules  CMakeLists.txt  LanternExampleMod.cpp  LanternExampleMod.h  README.md  TestMod.cpp  TestMod.h  framework.h
.github/workflows/: cmake-single-platform.yml
Hooks/FJ/: L10N.cpp  L10N.h
Hooks/Minecraft.World/item/: Item.cpp  Item.h  SwordItem.cpp  SwordItem.h
